PersonDetail nearly complete

--- a/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms/CSS/Styles.css
+++ b/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms/CSS/Styles.css
@@ -56,6 +56,13 @@ header {
     vertical-align: middle;
 }
 
+.CenteredContentLine {
+    float: left;
+    height: 30px;
+    text-align: center;
+    vertical-align: middle;
+}
+
 .FullContentBlock {
     float:left;
     width: 1400px;
